Closed
Bug 590026
Opened 15 years ago
Closed 15 years ago
Geolocation requests should disconnect their timer on shutdown
Categories
(Core :: DOM: Geolocation, defect)
Tracking
()
RESOLVED
FIXED
People
(Reporter: jdm, Assigned: jdm)
Details
Attachments
(2 files)
|
20.43 KB,
text/plain
|
Details | |
|
789 bytes,
patch
|
dougt
:
review+
benjamin
:
approval2.0+
|
Details | Diff | Splinter Review |
I was playing around with a simple testcase and ended up crashing on shutdown because a request timer ended up firing after the associated request had already been cleared and shutdown.
| Assignee | ||
Updated•15 years ago
|
OS: Linux → Windows CE
| Assignee | ||
Comment 1•15 years ago
|
||
Simple patch.
Assignee: nobody → josh
Attachment #468615 -
Flags: review?(doug.turner)
Updated•15 years ago
|
Attachment #468615 -
Flags: review?(doug.turner) → review+
Updated•15 years ago
|
Keywords: checkin-needed
Updated•15 years ago
|
Attachment #468615 -
Flags: approval2.0?
Still need approval
Keywords: checkin-needed
Updated•15 years ago
|
Attachment #468615 -
Flags: approval2.0? → approval2.0+
| Assignee | ||
Comment 3•15 years ago
|
||
Status: NEW → RESOLVED
Closed: 15 years ago
Resolution: --- → FIXED
You need to log in
before you can comment on or make changes to this bug.
Description
•