Bug 590026 - Geolocation requests should disconnect their timer on shutdown. r=dougt a=bsmedberg